--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     -->
     <title>React App</title>
   </head>
-  <body >
-    <div id="root" class = "full"></div>
+  <body id="root" >
+   
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
